use new version of icao

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body>
     <app-root></app-root>
 
-    <script type="module">
+    <!-- <script type="module" defer>
       import "get-icao-checker-wc/get-icao-checker-wc.js";
-    </script>
+    </script> -->
   </body>
 </html>
